# FePoc

./: .gitignore  README.md  vercel.json
PassKey/: .gitignore  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  requirements.txt
PassKey/examples/: README.md
PassKey/examples/django_test_app/: requirements.txt
PassKey/examples/django_test_app/core/: models.py  settings.py  urls.py  wsgi.py
PassKey/examples/django_test_app/core/migrations/: 0001_initial.py
PassKey/examples/nextjs_test_app/: package-lock.json  package.json
PassKey/examples/nextjs_test_app/pages/: index.js
PassKey/examples/nextjs_test_app/public/: passkey-sdk.js  passkey-utils.js
PassKey/examples/nextjs_test_app/public/sdk/: passkey-sdk.js
PassKey/passkey-auth-core/: README.md  pyproject.toml
PassKey/passkey-auth-core/passkey_core/: api_views.py  models.py  services.py  urls.py
PassKey/passkey-auth-core/passkey_core/migrations/: 0001_initial.py
PassKey/passkey-auth-core/passkey_core/static/passkey_core/js/: passkey-sdk.js
PassKey/sdk/: passkey-sdk.js
